fix search input icon layout issues

--- a/styles.css
+++ b/styles.css
@@ -25,23 +25,24 @@ nav {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin: 0 10px;
+  max-width: 300px;
 }
 .fa-magnifying-glass {
   position: absolute;
   top: 24%;
-  left: 85%;
+  left: 90%;
   font-size: 12px;
   color: hsl(0, 0%, 60%);
 }
 
 #search-input {
   border: 1px solid hsl(0, 0%, 60%);
-  width: 90%;
+  width: 100%;
   height: 25px;
   padding-left: 5px;
   border-radius: 5px;
   font-size: 12px;
-  margin: 0 auto;
 }
 
 #search-input::placeholder {
@@ -164,38 +165,11 @@ img {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
-  #search-input {
-    max-width: 300px;
-  }
-  .fa-magnifying-glass {
-    position: absolute;
-    top: 24%;
-    left: 80%;
-    font-size: 12px;
-    color: hsl(0, 0%, 60%);
-  }
 }
 @media screen and (min-width: 1000px) {
   #list {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-  }
-  .fa-magnifying-glass {
-    position: absolute;
-    top: 24%;
-    left: 75%;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .fa-magnifying-glass {
-    position: absolute;
-    left: 70%;
-  }
-}
-@media screen and (min-width: 1300px) {
-  .fa-magnifying-glass {
-    left: 68%;
   }
 }
 
